# mfa-app

./: .env_sample  .gitignore  BUILD_NOTES.md  README.md  build_and_sign_all.bat  build_temp.ps1  copy_and_sign.ps1  index.html  mfa_app.py  mfa_app.spec  mfa_verification_test_app.py  package-lock.json  package.json  requirements.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  hwid.rs  lib.rs  main.rs  qr.rs  storage.rs  totp.rs
src/components/: AddAccountDialog.tsx  ImportExportDialog.tsx  MainView.tsx  PinDialog.tsx  TOTPDisplay.tsx
src/styles/: index.css
